--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -2,17 +2,20 @@ patch:
   schema_list:
     - schema: luna_pinyin
 
-  switcher:
-    caption: 〔方案选单〕
-    hotkeys:
-      - Control+Shift+grave
+  switcher/caption: 〔方案选单〕
+  switcher/hotkeys:
+    - Control+Shift+grave
 
   menu/page_size: 8
 
-  key_binder:
-    select_first_character: "minus"
-    select_last_character: "equal"
-    bindings:
-      - { when: composing, accept: Tab, send: Right }
-      - { when: paging, accept: bracketleft, send: Page_Up }
-      - { when: has_menu, accept: bracketright, send: Page_Down }
+  key_binder/select_first_character: "minus"
+  key_binder/select_last_character: "equal"
+  key_binder/bindings:
+    - { when: composing, accept: Tab, send: Right }
+    - { when: paging, accept: bracketleft, send: Page_Up }
+    - { when: has_menu, accept: bracketright, send: Page_Down }
+
+  ascii_composer/switch_key:
+    Shift_L: commit_code
+    Shift_R: commit_code
+    Caps_Lock: noop
