--- a/luna_pinyin.custom.yaml
+++ b/luna_pinyin.custom.yaml
@@ -43,3 +43,7 @@ patch:
 
   # 以词定字
   "engine/processors/@before 0": lua_processor@select_character_processor
+
+  # 中英混输
+  __include: easy_en:/patch
+  easy_en/enable_sentence: false
