--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -1,6 +1,7 @@
 patch:
   schema_list:
     - schema: luna_pinyin
+    - schema: luna_pinyin_simp
 
   switcher/caption: 〔方案选单〕
   switcher/hotkeys:
