--- a/luna_pinyin.custom.yaml
+++ b/luna_pinyin.custom.yaml
@@ -1,5 +1,7 @@
 # Jed
 patch:
+  translator/dictionary: luna_pinyin.extended
+
   # 标点符号
   recognizer/patterns/punct: "^i([0-9]0?|[A-Za-z]+)$"
   punctuator:
@@ -14,6 +16,8 @@ patch:
       "=": "="
       "[": "【"
       "]": "】"
+      '{' : [ "{",『, 〖, ｛ ]
+      '}' : [ "}", 』, 〗, ｝ ]
       "'": { pair: ["「", "」"] }
       "/": "/"
       '\': '\'
@@ -47,3 +51,6 @@ patch:
   # 中英混输
   __include: easy_en:/patch
   easy_en/enable_sentence: false
+
+  "speller/algebra/@before 0": xform/^([b-df-hj-np-tv-z])$/$1_/
+  
