--- a/luna_pinyin.extended.dict.yaml
+++ b/luna_pinyin.extended.dict.yaml
@@ -1,40 +1,4 @@
 # Jed
-# Rime dictionary
-# encoding: utf-8
-#
-# Luna Pinyin Extended Dictionary(Basic)  - 明月拼音擴充詞庫（基本）
-#
-#   瑾昀 <cokunhui@gmail.com>
-#
-# Thanks to the following works:
-#
-# * 拼音加加論壇beckyer製作的繁體詞庫
-#   http://bbs.jjol.cn/showthread.php?t=6758
-#
-# * 小麥注音輸入法詞庫
-#   https://github.com/mjhsieh/McBopomofo/tree/master/Source/Data
-#
-# * 新酷音共享詞庫
-#   Google搜尋獲得，由臺灣网友整理
-#
-# * 詞庫网
-#   http://baseterm.com/
-#
-# * 敎育部詞頻統計表
-#   http://www.edu.tw/files/site_content/m0001/pin/biau2.htm?open
-#
-# * 維基百科
-#   http://www.wikipedia.org/
-#
-# 部署位置：
-# ~/.config/ibus/rime  (Linux)
-# ~/Library/Rime  (Mac OS)
-# %APPDATA%\Rime  (Windows)
-#
-# 於重新部署後生效
-#
-
----
 name: luna_pinyin.extended
 version: "2015.12.02"
 sort: by_weight
@@ -45,3 +9,6 @@ import_tables:
   - luna_pinyin
   - luna_pinyin.extended/luna_pinyin.cn_en
   - luna_pinyin.extended/luna_pinyin.poetry
+  - luna_pinyin.extended/luna_pinyin.math
+  - luna_pinyin.extended/luna_pinyin.kaomoji
+...
