emoji tips set to none; add datetiem support

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-*~
-.*~
-/luna_pinyin.userdb/*
-/easy_en.userdb/*
-/build/*
-/user.yaml
-/installation.yaml
+user.yaml
+installation.yaml
+build/
+*.userdb/
+custom_phrase.txt
