--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -1,7 +1,6 @@
 patch:
   schema_list:
     - schema: luna_pinyin
-    - schema: luna_pinyin_simp
 
   switcher/caption: 〔方案选单〕
   switcher/hotkeys:
@@ -9,14 +8,15 @@ patch:
 
   menu/page_size: 8
 
-  key_binder/select_first_character: "minus"
-  key_binder/select_last_character: "equal"
-  key_binder/bindings:
-    - { when: composing, accept: Tab, send: Right }
-    - { when: paging, accept: bracketleft, send: Page_Up }
-    - { when: has_menu, accept: bracketright, send: Page_Down }
+  key_binder:
+    select_first_character: "minus"
+    select_last_character: "equal"
+    bindings:
+      __patch:
+        - key_bindings:/paging_with_brackets
+        - key_bindings:/move_by_word_with_tab
 
   ascii_composer/switch_key:
     Shift_L: commit_code
     Shift_R: commit_code
-    Caps_Lock: noop
+    Caps_Lock: clear
