--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -2,7 +2,7 @@ patch:
   schema_list:
     - schema: luna_pinyin
 
-  switcher/caption: 〔方案选单〕
+  switcher/caption: 〔设置菜单〕
   switcher/hotkeys:
     - Control+Shift+grave
 
