--- a/luna_pinyin.custom.yaml
+++ b/luna_pinyin.custom.yaml
@@ -53,8 +53,8 @@ patch:
   __include: easy_en:/patch
   easy_en/enable_sentence: false
 
-  # 简拼与纠错
-  "speller/algebra/@before 0": xform/^([b-df-hj-np-tv-z])$/$1_/
+  # 拼写运算
+  "speller/algebra/@before 0": xform/^([b-df-hj-np-tv-z])$/$1_/ # 简拼
   speller/algebra/+/+:
     - derive/i$/ii/                         # ii -> i
     - derive/u$/uu/                         # uu -> u
