--- a/luna_pinyin.custom.yaml
+++ b/luna_pinyin.custom.yaml
@@ -68,3 +68,6 @@ patch:
   recognizer/patterns/reverse_lookup: "u[a-z]*'?$" # 'u'开头
   reverse_lookup/prefix: "u"
   reverse_lookup/tips: 〔笔画〕
+
+  easy_en/initial_quality: 0
+  
