--- a/luna_pinyin.extended.dict.yaml
+++ b/luna_pinyin.extended.dict.yaml
@@ -1,6 +1,8 @@
-# Jed
+# EZ Rime Settings (by Jed)
+# https://github.com/Jed-Z/ez-rime-settings
+
 name: luna_pinyin.extended
-version: "2015.12.02"
+version: "2020.12.30"
 sort: by_weight
 use_preset_vocabulary: true
 #此處爲明月拼音擴充詞庫（基本）默認鏈接載入的詞庫，有朙月拼音官方詞庫、明月拼音擴充詞庫（漢語大詞典）、明月拼音擴充詞庫（詩詞）、明月拼音擴充詞庫（含西文的詞彙）。如果不需要加載某个詞庫請將其用「#」註釋掉。
@@ -10,4 +12,6 @@ import_tables:
   - luna_pinyin.extended/luna_pinyin.cn_en
   - luna_pinyin.extended/luna_pinyin.poetry
   - luna_pinyin.extended/luna_pinyin.math
+  - luna_pinyin.extended/luna_pinyin.computer
+  - luna_pinyin.extended/luna_pinyin.sgmain
 ...
