--- a/luna_pinyin.extended.dict.yaml
+++ b/luna_pinyin.extended.dict.yaml
@@ -14,4 +14,5 @@ import_tables:
   - luna_pinyin.extended/luna_pinyin.math
   - luna_pinyin.extended/luna_pinyin.computer
   - luna_pinyin.extended/luna_pinyin.sgmain
+  - luna_pinyin.extended/luna_pinyin.english
 ...
