add shopping dictionary

--- a/luna_pinyin.extended.dict.yaml
+++ b/luna_pinyin.extended.dict.yaml
@@ -15,4 +15,5 @@ import_tables:
   - luna_pinyin.extended/luna_pinyin.computer
   - luna_pinyin.extended/luna_pinyin.sgmain
   - luna_pinyin.extended/luna_pinyin.english
+  - luna_pinyin.extended/luna_pinyin.shopping
 ...
